# TransPHLA-AOMP

./: .gitignore  README.md  TransPHLA.zsl.md  pHLAIformer_simple_requirements.txt  pyproject.toml
Dataset/: 1_Raw data processing framework.ipynb
Procedure Code/: pHLAIformer.ipynb  pHLAIformer_layer1_head12345_fold2345.py  pHLAformer-final model-neoantigen-HPVvaccine.ipynb
TransPHLA-AOMP/: mutation.py  pHLAIformer framework.ipynb  test.ipynb  utils.py
TransPHLA-AOMP/results/: predict_results.csv
demo/: pHLAIformer.ipynb
demo/TransPHLA/: model.py  pHLAIformer.py  run.sh
demo/results/: predict_results.csv
