[tool.poetry]
name = "transphla-aomp"
version = "0.1.0"
description = ""
authors = ["zhaisilong <zhaisilong@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.5.1"
jupyter = "^1.0.0"
torch = "^1.11.0"
tqdm = "^4.63.1"
tornado = "^6.1"
torchvision = "^0.12.0"
torchsummary = "^1.5.1"
torchaudio = "^0.11.0"
seaborn = "^0.11.2"
scikit-learn = "^1.0.2"
numpy = "1.20.0rc1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
